fixed image not showing issue

--- a/index.css
+++ b/index.css
@@ -1,44 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');
-/* 
-# Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-- Blue: hsl(246, 80%, 60%)
-
-- Light red (work): hsl(15, 100%, 70%)
-- Soft blue (play): hsl(195, 74%, 62%)
-- Light red (study): hsl(348, 100%, 68%)
-- Lime green (exercise): hsl(145, 58%, 55%)
-- Violet (social): hsl(264, 64%, 52%)
-- Soft orange (self care): hsl(43, 84%, 65%)
-
-### Neutral
-
-- Very dark blue: hsl(226, 43%, 10%)
-- Dark blue: hsl(235, 46%, 20%)
-- Desaturated blue: hsl(235, 45%, 61%)
-- Pale Blue: hsl(236, 100%, 87%)
-
-## Typography
-
-### Body Copy
-
-- Font size: 18px (card titles e.g. Work, Play)
-
-### Font
-
-- Family: [Rubik](https://fonts.google.com/specimen/Rubik)
-- Weights: 300, 400, 500 */
 
 * {
   margin: 0;
@@ -184,32 +144,32 @@ main {
 }
 
 .card-bg.work {
-  background-image: url('../images/icon-work.svg');
+  background-image: url('./images/icon-work.svg');
   background-color: hsl(15, 100%, 70%);
 }
 
 .card-bg.play {
-  background-image: url('../images/icon-play.svg');
+  background-image: url('./images/icon-play.svg');
   background-color: hsl(195, 74%, 62%);
 }
 
 .card-bg.study {
-  background-image: url('../images/icon-study.svg');
+  background-image: url('./images/icon-study.svg');
   background-color: hsl(348, 100%, 68%);
 }
 
 .card-bg.exercise {
-  background-image: url('../images/icon-exercise.svg');
+  background-image: url('./images/icon-exercise.svg');
   background-color: hsl(145, 58%, 55%);
 }
 
 .card-bg.social {
-  background-image: url('../images/icon-social.svg');
+  background-image: url('./images/icon-social.svg');
   background-color: hsl(264, 64%, 52%);
 }
 
 .card-bg.self-care {
-  background-image: url('../images/icon-self-care.svg');
+  background-image: url('./images/icon-self-care.svg');
   background-color: hsl(43, 84%, 65%);
 }
 
